2016-05-20  Karl Berry  <karl@tug.org>

	* Version 20160307 for TeX Live 2016.

2016-05-10  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* cidtype2.c: Fix bugs in horizontal-vertical mixed scripts by
	TrueType fonts.

2016-05-08  Masamichi HOSODA  <trueroad@trueroad.jp>

	* dvi.c, dvipdfmx.c, dvipdfmx.h, special.c: Add new specials to handle
	command line options.
	* spc_dvipdfmx.c, spc_dvipdfmx.h: Add for the new specials.
	* Makefile.am, Makefile.in: Change for the added spc_dvipdfmx.c,
	and spc_dvipdfmx.h.

2016-05-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdffont.c: Avoid to crash for too large a value of SOURCE_DATE_EPOCH.
	(w32 only).

2016-05-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfdoc.c, pdfencrypt.c, pdffont.c, pdfobj.h, xbb.c: Improve the
	support of SOURCE_DATE_EPOCH.

2016-05-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfdoc.c, xbb.c: Apply the patch by Alexis,
	http://tug.org/pipermail/tex-live/2016-May/038339.html
	for the support of SOURCE_DATE_EPOCH.
	* pdfencrypt.c: Use gmtime instead of localtime if SOURCE_DATE_EPOCH
	is given, to be consistent with the patch by Alexis.

2016-03-07  Karl Berry  <karl@tug.org>

	* man/dvipdfmx.1: .B not .b.
	Report on tex-k from esr, 29 Feb 2016 12:30:31.

2016-03-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* configure.ac, tests/*.[bb,xbb]: Update version number to 20160307
	for TeX Live 2016.

2016-03-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c, dvipdfmx.h, mpost.c: Introduce a new option --mvorigin.
	The translation of the origin in MP inclusion by using dvipdfmx.def
	or xdvipdfmx.def is enabled only if the option --mvorigin is set.

2016-02-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Change the default value of pdfdecimaldigits from 2
	to 3, to be consistent with pdfTeX.

2016-02-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfdoc.c, pdfencrypt.c, pdffont.c, pdfobj.h, xbb.c: Support to output