@@ -1,4 +1,4 @@
 %%Title: picbmp.bmp
-%%Creator: extractbb 20160307
+%%Creator: extractbb 20160619
 %%BoundingBox: 0 0 24 24
 
