@@ -1,5 +1,5 @@
 %%Title: picbmp.bmp
-%%Creator: extractbb 20160307
+%%Creator: extractbb 20160619
 %%BoundingBox: 0 0 30 30
 %%HiResBoundingBox: 0.000000 0.000000 29.715155 29.715155
 
