@@ -1,5 +1,5 @@
 %%Title: picjp2.jp2
-%%Creator: extractbb 20160307
+%%Creator: extractbb 20160619
 %%BoundingBox: 0 0 33 33
 %%HiResBoundingBox: 0.000000 0.000000 33.000000 33.000000
 
