@@ -1,5 +1,5 @@
 %%Title: picjpeg.jpeg
-%%Creator: extractbb 20160307
+%%Creator: extractbb 20160619
 %%BoundingBox: 0 0 150 205
 %%HiResBoundingBox: 0.000000 0.000000 150.000000 205.000000
 
