@@ -1,4 +1,4 @@
 %%Title: picpdf.pdf
-%%Creator: extractbb 20160307
+%%Creator: extractbb 20160619
 %%BoundingBox: 0 0 69 83
 
