@@ -1,5 +1,5 @@
 %%Title: picpdf.pdf
-%%Creator: extractbb 20160307
+%%Creator: extractbb 20160619
 %%BoundingBox: 0 0 69 83
 %%HiResBoundingBox: 0.000000 0.000000 69.000000 83.000000
 %%PDFVersion: 1.4
