@@ -1,5 +1,5 @@
 %%Title: picpng.png
-%%Creator: extractbb 20160307
+%%Creator: extractbb 20160619
 %%BoundingBox: 0 0 172 124
 %%HiResBoundingBox: 0.000000 0.000000 172.000000 124.000000
 
