@@ -1,3 +1,10 @@
+2016-06-19  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* dvipdfmx.c: Disable overriding "D" option setting from
+	dvipdfmx:config special.
+	* configure.ac: Change version from 20160307 to 20160619 in order to
+	distinguish the new one from that in TeX Live 2016.
+
 2016-05-20  Karl Berry  <karl@tug.org>
 
 	* Version 20160307 for TeX Live 2016.
